# dbconform

./: .cursorignore  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.cursor/rules/: cleanup.mdc  cli-conventions.mdc  core.mdc  development.mdc  libraries-packages.mdc  python-features.mdc  requirements.mdc  sqlite-dialect.mdc  tests.mdc
docs/requirements/: 00-overview.md  01-functional.md  02-non-functional.md  CHANGELOG.md
docs/technical/: 00-libraries-packages.md  01-test-database.md  02-architecture.md  03-transactions-and-savepoints.md  04-sqlite-vs-postgres-differences.md  05-model-column-defaults.md  design-decisions.md
src/dbconform/: __init__.py  cli.py  conform.py  errors.py
src/dbconform/adapters/: __init__.py  model_schema.py  sa_to_neutral.py
src/dbconform/compare/: __init__.py  db_schema.py  diff.py
src/dbconform/integrations/: __init__.py
src/dbconform/integrations/dbt/: __init__.py  _generate.py
src/dbconform/internal/: __init__.py  objects.py  types.py
src/dbconform/plan/: __init__.py  builder.py  not_null_backfill.py  skipped_policy.py  skipped_types.py  steps.py
src/dbconform/schema/: __init__.py  db_schema.py  diff.py  model_schema.py  objects.py  sa_to_neutral.py
src/dbconform/sql_dialect/: __init__.py  base.py  check_expression.py  postgresql.py  sqlite.py  sqlite_rebuild.py
src/modelsync/: __init__.py  cli.py  errors.py  sync.py
src/modelsync/adapters/: __init__.py  model_schema.py  sa_to_neutral.py
src/modelsync/compare/: __init__.py  db_schema.py  diff.py
src/modelsync/dialect/: __init__.py  base.py  postgresql.py  sqlite.py
src/modelsync/internal/: __init__.py  objects.py
src/modelsync/plan/: __init__.py  builder.py  steps.py
src/modelsync/schema/: __init__.py  db_schema.py  diff.py  model_schema.py  objects.py  sa_to_neutral.py  types.py
src/modelsync/sql_dialect/: __init__.py  base.py  postgresql.py  sqlite.py
tests/: TESTS_README.md  __init__.py  conftest.py  docker-compose.yml  shared_models.py  test_compare_simple_model.py
tests/integration/: __init__.py  briantest.py  conftest.py  test_compare_simple_model.py  test_compare_simple_model_async.py  test_integration_column_shrink_skips.py  test_integration_column_types.py  test_integration_columns.py  test_integration_postgres_indexes.py  test_integration_postgres_issue12.py  test_integration_postgres_schema.py  test_integration_postgres_types.py  test_integration_table_lifecycle.py
tests/schema/: __init__.py  test_diff.py
tests/unit/: __init__.py  test_conform_drift.py  test_simple_model.py
tests/unit/adapters/: __init__.py  test_index_extraction.py  test_model_schema.py  test_sa_to_neutral.py  test_simple_model.py
tests/unit/compare/: test_diff.py
tests/unit/dialect/: __init__.py  test_postgresql.py
tests/unit/integrations/: test_dbt_generate.py
tests/unit/internal/: test_types.py
tests/unit/plan/: __init__.py  test_builder.py  test_conform_plan_summary.py  test_not_null_backfill.py  test_skipped_policy.py
tests/unit/schema/: test_diff.py  test_sa_to_neutral.py  test_types.py
tests/unit/sql_dialect/: __init__.py  test_check_expression.py  test_postgresql.py  test_sqlite.py
