[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "modelsync"
version = "0.1.0"
description = "Synchronize database models with actuals — document-driven project."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Brian L. Pond" }]
dependencies = [
    "sqlalchemy>=2.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/brian-pond/modelsync"
Repository = "https://github.com/brian-pond/modelsync"

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "ruff",
    "sqlmodel",
    "typer>=0.9",
]
postgres = [
    "psycopg[binary]>=3",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = []

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
modelsync = "modelsync.cli:main"
