[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dbconform"
version = "0.2.0"
description = "Synchronize database schema to models — document-driven project."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Brian L. Pond" }]
dependencies = [
    "sqlalchemy>=2.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/brian-pond/dbconform"
Repository = "https://github.com/brian-pond/dbconform"

[project.optional-dependencies]
async = [
    "aiosqlite",
    "asyncpg",
]
dev = [
    "build",
    "commitizen",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "sqlmodel",
    "typer>=0.9",
]
postgres = [
    "psycopg[binary]>=3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 110
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = []

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
dbconform = "dbconform.cli:main"

[tool.commitizen]
version = "0.2.0"
version_scheme = "semver"
commit = true
tag = true
version_files = [
    "pyproject.toml:^version",
]